# nxdrvlinux

./: .gitignore  LICENSE-GPL  build_install_driver  readme.md
BSL/: bsl_history.txt
cifx_m2/: Makefile  ax99100-pci-gpio.c  ax99100-pci-spi.c  ax99100-pci.cdx.json  dkms.conf  readme.md
examples/: CMakeLists.txt  readme.md
examples/api/: CMakeLists.txt  cifxlinuxsample.c  readme.md
examples/tcpserver/: CMakeLists.txt  HilFileHeaderV3.h  OS_Includes.h  cifx_download_hook.c  cifx_download_hook.h  os_specific.c  readme.md  tcp_connector.c  tcp_connector.h  tcp_server.c  tcp_server.h
examples/tcpserver/Marshaller/: CifXTransport.c  CifXTransport.h  HilMarshaller.c  MarshallerConfig.h  MarshallerErrors.h  MarshallerInternal.h  MarshallerVersion.h  OS_Dependent.h  Version History.txt  cifXAPI_Wrapper.h  doxygen.h
examples/tcpserver/Marshaller/APIHeader/: HilFileHeader.h  HilFileHeaderV3.h  HilTransport.h  MarshallerFrame.h  TLR_Results.h  TLR_Types.h  netXConnectorErrors.h  rcX_Error.h  rcX_Public.h  rcX_User.h
examples/tcpserver/Marshaller/OSAbstraction/: OS_Custom.c  OS_Includes.h
examples/tcpserver/Marshaller/cifXAPI/: cifXErrors.h  cifXUser.h  netXAPI.h
examples/tcpserver/Marshaller/doxygen/: Doxyfile.cfg  header.html
libcifx/: CMakeLists.txt  LICENSE.md  OS_Includes.h  cifx.pc.in  cifxlinux.c  cifxlinux.h  cifxlinux_internal.h  os_linux.c  toolchain-xx.cmake  user_linux.c
libcifx/Toolkit/: LICENSE.md  doxygen.h  version_history.txt
libcifx/Toolkit/Common/HilscherDefinitions/: Hil_ApplicationCmd.h  Hil_BootParameter.h  Hil_CommandRange.h  Hil_Compiler.h  Hil_ComponentID.h  Hil_DeviceProductionData.h  Hil_DualPortMemory.h  Hil_FileHeaderNXS.h  Hil_FileHeaderV3.h  Hil_FirmwareIdent.h  Hil_GenericCommunicationInterface.h  Hil_Logbook.h  Hil_ModuleLoader.h  Hil_Packet.h  Hil_Results.h  Hil_SharedDefines.h  Hil_SystemCmd.h  Hil_Taglist.h  Hil_Types.h  User_Compiler.h
libcifx/Toolkit/Common/cifXAPI/: cifXUser.h  netXAPI.h
libcifx/Toolkit/OSAbstraction/: OS_Custom.c  OS_Includes.h  OS_SPICustom.c
libcifx/Toolkit/SerialDPM/: OS_Spi.h  SerialDPMInterface.c  SerialDPMInterface.h
libcifx/Toolkit/Source/: HilPCIDefs.h  Hilcrc32.c  Hilcrc32.h  Hilmd5.c  Hilmd5.h  NetX_RegDefs.h  OS_Dependent.h  cifXDownload.c  cifXEndianess.c  cifXEndianess.h  cifXFunctions.c  cifXHWFunctions.c  cifXHWFunctions.h  cifXInit.c  cifXInterrupt.c  cifXToolkit.h  netX5x_hboot.c  netX5xx_hboot.c  netX90_netX4x00.c  netx90_4x00_romloader_dpm.h
libcifx/Toolkit/User/: TKitUser_Custom.c
libcifx/netx_tap/: DrvEth_GCI_API.h  netx_tap.c  netx_tap.h
libcifx/sbom/: libcifx.cdx.in  libnl.cdx.in  libpciaccess.cdx.in
plugins/: readme.md
plugins/netx-spm/: CMakeLists.txt  cifx_plugin.c  config0  libsdpm.c  libsdpm.h
scripts/: device.conf  install_firmware  install_libcifx  install_uio_netx  register_vfio_device  update_sbom
templates/: netx.dtsi
templates/plugins/netx-spm/: config0
templates/udev/: 80-udev-cifxeth.rules  80-udev-netx.rules  cifxeth
uio_netx/: Makefile  dkms.conf  readme.md  uio_netx.c  uio_netx.cdx.json
